<resources>
    <string name="app_name">Magpie\'s Nest</string>
    <string name="create_product_headline">Create new product</string>
    <string name="update_product_headline">Update product</string>
    <string name="product_headline">Return</string>
    <string name="price_headline">Price:</string>
    <string name="currency_sign">\ SEK</string>
    <string name="product_image">Image of the product</string>

    <string name="create_product_form_headline">Fill in the form:</string>
    <string name="update_product_form_headline">Update the product\'s info:</string>
    <string name="product_name">Product\'s name</string>
    <string name="product_description">Description</string>
    <string name="product_price">Price</string>
    <string name="product_category">Category</string>
    <string name="product_seller_btn">Seller</string>
    <string name="product_seller">Seller:</string>

    <string name="btn_product">New Item</string>
    <string name="publish_product">Publish</string>
    <string name="update_product">Update</string>
    <string name="delete_product">Delete</string>
    <string name="reviews_product">Reviews</string>

    <string name="product_name_placeholder">Product\'s name here</string>
    <string name="product_description_placeholder">Long or short description all around here</string>
    <string name="product_price_placeholder">Amazing price in\ </string>
    <string name="product_seller_placeholder">Some seller</string>
    <string name="category_placeholder">Selected category</string>
    <string name="seller_headline">Welcome to the seller page</string>


    <string name="category_type">Select a category</string>
    <string name="category_type1">Clothing &amp; Accessories</string>
    <string name="category_type2">Electronics</string>
    <string name="category_type3">Furniture</string>
    <string name="category_type4">Sport Equipment</string>
    <string name="category_type5">Miscellaneous</string>
</resources>
