<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductScreen">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/list_item_icon"
            android:contentDescription="@string/product_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="0dp"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/textTitle"
            android:text="@string/product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/list_item_icon"/>


        <TextView
            android:id="@+id/name_placeholder"
            android:text="@string/product_name_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textTitle"/>


        <TextView
            android:id="@+id/description_placeholder"
            android:text="@string/product_description_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/name_placeholder"/>

        <TextView
            android:id="@+id/price_placeholder"
            android:text="@string/product_price_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/description_placeholder"/>
        <TextView
            android:id="@+id/currency_sign_placeholder"
            android:text="@string/currency_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/description_placeholder"
            android:layout_toEndOf="@id/price_placeholder"
            android:layout_toRightOf="@id/price_placeholder"/>

    </RelativeLayout>

    <Button
        android:id="@+id/update_product_btn"
        android:text="@string/update_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:onClick="onClickUpdateProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>